--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
 
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
